# game_python

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: entities.py  main.py  settings.py  utils.py
src/core/: components.py  scene.py  systems.py
src/scenes/: game.py  game_over.py  menu.py  pause.py  victory.py
