[project]
name = "game-python"
version = "0.1.0"
description = "Um jogo demonstrativo de engenharia de software rodando no navegador."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "esper>=3.4",
    "pybag>=2.2.16",
    "pygame-ce>=2.5.6",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306 ; sys_platform == 'win32'"
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
