[project]
name = "game-python"
version = "0.1.0"
description = "Um jogo demonstrativo de engenharia de software rodando no navegador."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "esper>=3.4",
    "pygame>=2.6.1",
    "pygame-ce>=2.5.6",
    "pygbag",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
pygbag = { git = "https://github.com/pygame-web/pygbag.git" }
